--- a/css/main.css
+++ b/css/main.css
@@ -101,11 +101,11 @@ span {
 }
 .img-fluid {
   max-width: 100%;
-  max-height: 100%;
 }
 img {
   display: inline-block;
   vertical-align: middle;
+  object-fit: cover;
 }
 .clear-fix {
   clear: both;
@@ -1038,6 +1038,12 @@ main .slider .slider-content.active {
   opacity: 0.8;
   left: 0px;
 }
+/*
+placeholder-shown
+check if there is placeholder in input 
+if there is placeholder then user not write anything
+if else then user wirte in input so action must be perform (float) 
+*/
 .contact-content .col .form-contact .textarea-control:hover + .float,
 .contact-content .col .form-contact .textarea-control:focus + .float,
 .contact-content
